# portfolio

./: .gitignore  .prettierignore  Cargo.toml  Makefile.toml  package.json  pnpm-lock.yaml  tailwind.config.cjs
src/: lib.rs  main.rs  telemetry.rs
src/routes/: health.rs  index.rs  mod.rs  not_found.rs
templates/: layout.html
