[package]
name = "jeromem_dev"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jeromem_dev"

[dependencies]
askama = { version = "0.12.0", features = ["markdown", "with-axum"] }
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.9"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["compression-gzip", "fs", "normalize-path", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
