[package]
name = "jeromem_dev"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "jeromem_dev"

[dependencies]
askama = { version = "0.12", features = ["markdown", "with-axum"] }
axum = "0.7"
axum-extra = "0.9.0"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-gzip", "fs", "normalize-path", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
